# nonomaker

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: deploy-web.yml
apps/web/: .gitignore  index.html  package.json  vite.config.ts  wrangler.toml
apps/web/src/: App.tsx  styles.css  vite-env.d.ts
apps/web/src/components/: EditorGrid.tsx  PuzzleBoard.tsx
apps/web/src/hooks/: useWasm.ts
apps/web/src/utils/: grid.ts
apps/web/src/wasm/: api.ts  types.ts  worker.ts  workerClient.ts
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  io.rs  main.rs
crates/cli/src/commands/: convert.rs  grid_to_puzzle.rs  solve.rs
crates/cli/tests/: solve_fixtures.rs
crates/cli/tests/fixtures/: 54905.fp2.json  54905.input.json  54905.output.json  54905.partial.json  54943.fp2.json  54943.input.json  54943.output.json  54943.partial.json  54958.fp1.json  54958.input.json  54958.output.json  54958.partial.json  55007.fp2.json  55007.input.json  55007.output.json  55007.partial.json  55009.fp1.json  55009.input.json  55009.output.json  55009.partial.json  55018.fp1.json  55018.input.json  55018.output.json  (+15 more)
crates/core/: Cargo.toml
crates/core/src/: codec.rs  format.rs  image.rs  lib.rs  solver.rs  types.rs
crates/core/src/image/: convert.rs
crates/core/src/solver/: backtracking.rs  fully_probing.rs  line_solver.rs  propagation.rs  sat.rs
crates/core/src/solver/line_solver/: bits.rs  contradiction.rs  dp.rs  earliest_latest.rs  segment.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
scripts/: view-grid.html
