[package]
name = "nonomaker-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
imageproc = "0.25"
base64 = "0.22"
flate2 = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
splr = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
splr = { version = "0.17", features = ["platform_wasm"] }
