[package]
name = "nonomaker-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nonomaker-core = { path = "../core" }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[features]
default = ["console_error_panic_hook"]
